[package]
name = "net-deps"
version = "0.1.0"
edition = "2021"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
description = """
A commandline tool to extract network dependencies from MRT files.
"""
keywords = ["bgp", "bgpkit", "mrt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.20", features=["derive"]}
bgpkit-broker = "0.4.1"
bgpkit-parser = "0.8.1"
chrono = "0.4.22"
rayon = "1.5.3"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
oneio = "0.3.0"